[package]
name = "dojo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
colored = "3.0.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
